@@ -2760,3 +2760,10 @@
 	  window to revert to the previous window.  Not good behavior.
 	* sched/sched_mergepending.c:  Add task switching instrumentation.  There is a case
 	  here where instrumentation was missing.  Contributed by Petri Tanskanen.
+	CONFIG_STMPE11_THRESHX, CONFIG_STMPE11_THRESHX, and drivers/stmpe11_tsc.c:  Add some
+	  threasholding controls to all slow down processing of touchscreen samples.
+	  This is a problem with NX in multi-user mode:  touchscreen data gets sent
+	  via a message and when the message queue gets full the sender blocks and
+	  touch events are lost.  Basic data overrun.  The badly effects touchscreen
+	  human factors.
+  
